--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,14 @@
     <title>Contact</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/accueil.html">Accueil</a></li>
+        <li><a href="/produits.html">Produits</a></li>
+        <li><a href="/Contact.html">Contact</a></li>
+        <li><a href="/apropos.html">A propos</a></li>
+      </ul>
+    </nav>
     <h1>Lorem ipsum dolor sit amet.</h1>
   </body>
 </html>
