--- a/accueil.html
+++ b/accueil.html
@@ -6,6 +6,14 @@
     <title>Accueil</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/accueil.html">Accueil</a></li>
+        <li><a href="/produits.html">Produits</a></li>
+        <li><a href="/Contact.html">Contact</a></li>
+        <li><a href="/apropos.html">A propos</a></li>
+      </ul>
+    </nav>
     <h1>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo optio, quis
       illum natus iusto sit dolores nam nostrum nobis suscipit accusantium
