--- a/accueil.html
+++ b/accueil.html
@@ -19,5 +19,8 @@
       illum natus iusto sit dolores nam nostrum nobis suscipit accusantium
       placeat dicta ratione deleniti odio, amet facilis excepturi labore.
     </h1>
+    <footer>
+      <h5>Lorem ipsum dolor sit amet.</h5>
+    </footer>
   </body>
 </html>
