--- a/produits.html
+++ b/produits.html
@@ -15,5 +15,8 @@
       </ul>
     </nav>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+    <footer>
+      <h5>Lorem ipsum dolor sit amet.</h5>
+    </footer>
   </body>
 </html>
